update curriculum information

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -4,7 +4,7 @@
 % my curriculum vitae -- brazilian portuguese version
 %
 % created: 2013-05-26
-% last revision: 2013-05-26
+% last revision: 2014-03-01
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -25,65 +25,51 @@
 \address{Rua Engenheiro Humberto Soares Camargo, 202}{13083-780. Campinas, São
 Paulo, Brasil}
 \mobile{+55~(11)~96624~2947}
-\email{alexandre.medeiros@students.ic.unicamp.br}
+\email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.sdf.org}
 \extrainfo{alemedeiros no gitorious, github}
 
 \begin{document}
 \makecvtitle
-\section{Resumo}
+%\section{Resumo}
 {
-  Tenho interesse em diversos tópicos de Ciência da Computação, como teoria da
-  computação, arquitetura de computadores e algoritmos, também tenho muito
-  interesse em tópicos de matemática. Eu uso e apoio o Software Livre.
 }
 
 \section{Educação}
-\cventry{2011--}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas,
-São Paulo, Brasil}{}{Em Andamento (Previsão de graduação em Julho de 2015).}
+\cventry{2011--}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}
+{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação em Julho de 2015).}
 
 \section{Experiência}
 
 \subsection{Acadêmico}
 
-\cventry{2013--}{Consumo de energia em dispositivos móveis ARM}{Iniciação
-Científica}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}
-{Orientador: Prof. Dr. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Dr. Sandro
-Rigo (IC-Unicamp).  Financiado por bolsa da Samsung}
+\cventry{2013--2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}
+{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}
+{Orientador: Prof. Dr. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Dr. Sandro Rigo (IC-Unicamp).  Financiado por bolsa da Samsung}
 
-\cventry{2013}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de
-Campinas}{Campinas, São Paulo, Brasil}{
-  \begin{itemize}
-    \item MC404 -- Organização Básica de Computadores e Linguagem de Montagem --
-      Prof.  Dr. Edson Borin -- 1º semestre de 2013.
-    \item MC202 -- Estruturas de Dados -- Prof.  Dr. Tomasz Kowaltowski -- 2º
-      semestre de 2012.
-    \item MC202 -- Estruturas de Dados -- Prof.  Dr. Cid Carvalho de Souza -- 1º
-      semestre de 2012.
-  \end{itemize}
+\cventry{2012--2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{
+    \begin{itemize}
+        \item MC102 -- Algoritmos e Programação de Computadores -- Prof. Hélio Pedrini -- 1º semestre de 2014
+        \item MC102 -- Algoritmos e Programação de Computadores -- Prof. Cid Carvalho de Souza -- 2º semestre de 2013
+        \item MC404 -- Organização Básica de Computadores e Linguagem de Montagem -- Prof. Dr. Edson Borin -- 1º semestre de 2013.
+        \item MC202 -- Estruturas de Dados -- Prof. Tomasz Kowaltowski -- 2º semestre de 2012.
+        \item MC202 -- Estruturas de Dados -- Prof. Cid Carvalho de Souza -- 1º semestre de 2012.
+    \end{itemize}
 }
 
 \subsection{Voluntário}
 
-\cventry{2011--}{Coordenador Administrativo}{CACo}{Universidade Estadual de
-Campinas}{Campinas, São Paulo, Brasil}{Centro Acadêmico dos estudantes de
-Computação da Unicamp}
+\cventry{2011--}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação}{Universidade Estadual de Campinas}
+{Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
 
-\cventry{2012--}{Representante Discente de Graduação}{Instituto de Computação}
-{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Representante
-Discente na Comissão de Graduação do Instituto de Computação durante o período
-de 2012-13.}
+\cventry{2012--2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}
+{Campinas, São Paulo, Brasil}{Representante Discente na Comissão de Graduação do Instituto de Computação durante o período de 2012-13.}
 
-\cventry{2012, 2013}{Instrutor de GNU/Linux básico para Calouros}{GPSL}
-{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas
-de GNU/Linux para Alunos de Computação}
-
-\section{Idiomas}
-\cvlanguage{Português Brasileiro}{Fluente}{Língua Nativa}
-\cvlanguage{Inglês}{Fluente}{}
+\cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}
+{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
-\cvitem{Sistemas Operacionais}{GNU/Linux (Arch Linux, Debian)}
+\cvitem{Sistemas Operacionais}{GNU/Linux (Arch Linux)}
 
 \cvitem{Programação}{Python, C/C++, Shell Script, Assembly (ARM)}
 
@@ -91,5 +77,9 @@ de GNU/Linux para Alunos de Computação}
 
 \cvcomputer{Processamento de Texto}{\LaTeX{}, libreoffice writer}
 {Outros}{libreoffice calc, libreoffice impress}
+
+\section{Idiomas}
+\cvlanguage{Português Brasileiro}{Fluente}{Língua Nativa}
+\cvlanguage{Inglês}{Fluente}{Média de 8.0 no teste IELTS Academic (2013)}
 
 \end{document}
