--- a/cv-br.tex
+++ b/cv-br.tex
@@ -4,14 +4,14 @@
 % my curriculum vitae -- brazilian portuguese version
 %
 % created: 2013-05-26
-% last revision: 2014-03-01
+% last revision: 2014-03-02
 
-\documentclass[10pt,a4paper,sans]{moderncv}
+\documentclass[10pt,a4paper]{moderncv}
 \usepackage{fullpage}
 \usepackage[brazilian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{lmodern}
+\usepackage{concmath}
 
 % cv style
 \moderncvtheme[black]{classic}
@@ -41,7 +41,7 @@ Paulo, Brasil}
 
 \section{Experiência}
 
-\subsection{Acadêmico}
+\subsection{Acadêmica}
 
 \cventry{2013--2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}
 {Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}
@@ -57,9 +57,9 @@ Paulo, Brasil}
     \end{itemize}
 }
 
-\subsection{Voluntário}
+\subsection{Voluntária}
 
-\cventry{2011--}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação}{Universidade Estadual de Campinas}
+\cventry{2011--2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação}{Universidade Estadual de Campinas}
 {Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
 
 \cventry{2012--2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}
