--- a/cv-en.tex
+++ b/cv-en.tex
@@ -4,9 +4,9 @@
 % my curriculum vitae -- english version
 %
 % created: 2013-05-26
-% last revision: 2014-03-01
+% last revision: 2014-03-02
 
-\documentclass[10pt,a4paper,sans]{moderncv}
+\documentclass[10pt,a4paper]{moderncv}
 \usepackage{fullpage}
 \usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
@@ -59,7 +59,7 @@ Brazil}
 
 \subsection{Volunteer}
 
-\cventry{2011--}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}
+\cventry{2011--2014}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}
 {Campinas, São Paulo, Brazil}{Unicamp Computing Students' Union (CACo).}
 
 \cventry{2012--2013}{Undergraduate Representative}{Institute of Computing}{University of Campinas}
