--- a/cv-br.tex
+++ b/cv-br.tex
@@ -59,7 +59,7 @@ Paulo, Brasil}
 
 \subsection{Voluntária}
 
-\cventry{2011--2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação}{Universidade Estadual de Campinas}
+\cventry{2011--2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação)}{Universidade Estadual de Campinas}
 {Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
 
 \cventry{2012--2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}
