--- a/cv-br.tex
+++ b/cv-br.tex
@@ -45,13 +45,13 @@ Paulo, Brasil}
 
 \cventry{2013--2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}
 {Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}
-{Orientador: Prof. Dr. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Dr. Sandro Rigo (IC-Unicamp).  Financiado por bolsa da Samsung}
+{Orientador: Prof. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Sandro Rigo (IC-Unicamp). Financiado por bolsa da Samsung}
 
 \cventry{2012--2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{
     \begin{itemize}
         \item MC102 -- Algoritmos e Programação de Computadores -- Prof. Hélio Pedrini -- 1º semestre de 2014
         \item MC102 -- Algoritmos e Programação de Computadores -- Prof. Cid Carvalho de Souza -- 2º semestre de 2013
-        \item MC404 -- Organização Básica de Computadores e Linguagem de Montagem -- Prof. Dr. Edson Borin -- 1º semestre de 2013.
+        \item MC404 -- Organização Básica de Computadores e Linguagem de Montagem -- Prof. Edson Borin -- 1º semestre de 2013.
         \item MC202 -- Estruturas de Dados -- Prof. Tomasz Kowaltowski -- 2º semestre de 2012.
         \item MC202 -- Estruturas de Dados -- Prof. Cid Carvalho de Souza -- 1º semestre de 2012.
     \end{itemize}
