--- a/cv-en.tex
+++ b/cv-en.tex
@@ -45,7 +45,7 @@ Brazil}
 
 \cventry{2013--2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}
 {University of Campinas}{Campinas, São Paulo, Brazil}
-{Advisor: Prof.  Dr. Edson Borin (IC-Unicamp). Co-Advisor: Prof. Dr.  Sandro Rigo (IC-Unicamp).  Funded by a Samsung Scholarship}
+{Advisor: Prof. Edson Borin (IC-Unicamp). Co-Advisor: Prof. Sandro Rigo (IC-Unicamp). Funded by a Samsung Scholarship}
 
 \cventry{2012--2014}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{
     \begin{itemize}
