remove address and change technical skills

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -4,7 +4,7 @@
 % my curriculum vitae -- brazilian portuguese version
 %
 % created: 2013-05-26
-% last revision: 2014-03-02
+% last revision: 2014-03-09
 
 \documentclass[10pt,a4paper]{moderncv}
 \usepackage{fullpage}
@@ -22,8 +22,6 @@
 
 % optional info
 \title{Curriculum Vitae}
-\address{Rua Engenheiro Humberto Soares Camargo, 202}{13083-780. Campinas, São
-Paulo, Brasil}
 \mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.sdf.org}
@@ -69,14 +67,9 @@ Paulo, Brasil}
 {Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
-\cvitem{Sistemas Operacionais}{GNU/Linux (Arch Linux)}
-
-\cvitem{Programação}{Python, C/C++, Shell Script, Assembly (ARM)}
-
-\cvcomputer{Editores}{vim, gedit}{Controle de Versão}{git}
-
-\cvcomputer{Processamento de Texto}{\LaTeX{}, libreoffice writer}
-{Outros}{libreoffice calc, libreoffice impress}
+\cvitem{Básico}{Shell Script, ARM Assembly, Lua}
+\cvitem{Intermediário}{Sistemas operacionais GNU/Linux, git, \LaTeX{}}
+\cvitem{Avançado}{C, Python}
 
 \section{Idiomas}
 \cvlanguage{Português Brasileiro}{Fluente}{Língua Nativa}
