--- a/cv-en.tex
+++ b/cv-en.tex
@@ -4,7 +4,7 @@
 % my curriculum vitae -- english version
 %
 % created: 2013-05-26
-% last revision: 2014-03-02
+% last revision: 2014-03-09
 
 \documentclass[10pt,a4paper]{moderncv}
 \usepackage{fullpage}
@@ -22,8 +22,6 @@
 
 % optional info
 \title{Curriculum Vitae}
-\address{202 Eng. Humberto S. de Camargo Street}{13083-780. Campinas, São Paulo,
-Brazil}
 \mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.sdf.org}
@@ -69,14 +67,9 @@ Brazil}
 {Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
 \section{Technical Skills}
-\cvitem{Operating Systems}{GNU/Linux (Arch Linux)}
-
-\cvitem{Programming}{Python, C, Shell Script, Assembly (ARM)}
-
-\cvcomputer{Editors}{vim, gedit}{Version Control}{git}
-
-\cvcomputer{Text Processing}{\LaTeX{}, libreoffice writer} {Others}{libreoffice
-calc}
+\cvitem{Basic}{Shell Script, ARM Assembly, Lua}
+\cvitem{Intermediate}{GNU/Linux Operating Systems, git, \LaTeX{}}
+\cvitem{Advanced}{C, Python}
 
 \section{Languages}
 \cvlanguage{Brazilian Portuguese}{Fluent}{Native Language}
