change font and ignore column width.

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -6,12 +6,12 @@
 % created: 2013-05-26
 % last revision: 2014-03-09
 
-\documentclass[10pt,a4paper]{moderncv}
+\documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
 \usepackage[brazilian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{concmath}
+\usepackage{gillius}
 
 % cv style
 \moderncvtheme[black]{classic}
@@ -29,21 +29,16 @@
 
 \begin{document}
 \makecvtitle
-%\section{Resumo}
-{
-}
+%\section{Resumo}{}
 
 \section{Educação}
-\cventry{2011--}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}
-{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação em Julho de 2015).}
+\cventry{2011--}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação em Julho de 2016).}
 
 \section{Experiência}
 
 \subsection{Acadêmica}
 
-\cventry{2013--2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}
-{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}
-{Orientador: Prof. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Sandro Rigo (IC-Unicamp). Financiado por bolsa da Samsung}
+\cventry{2013--2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Orientador: Prof. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Sandro Rigo (IC-Unicamp). Financiado por bolsa da Samsung}
 
 \cventry{2012--2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{
     \begin{itemize}
@@ -57,14 +52,11 @@
 
 \subsection{Voluntária}
 
-\cventry{2011--2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação)}{Universidade Estadual de Campinas}
-{Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
+\cventry{2011--2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação)}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
 
-\cventry{2012--2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}
-{Campinas, São Paulo, Brasil}{Representante Discente na Comissão de Graduação do Instituto de Computação durante o período de 2012-13.}
+\cventry{2012--2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Representante Discente na Comissão de Graduação do Instituto de Computação durante o período de 2012-13.}
 
-\cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}
-{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
+\cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
 \cvitem{Básico}{Shell Script, ARM Assembly, Lua}
