--- a/cv-en.tex
+++ b/cv-en.tex
@@ -6,12 +6,12 @@
 % created: 2013-05-26
 % last revision: 2014-03-09
 
-\documentclass[10pt,a4paper]{moderncv}
+\documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
 \usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{concmath}
+\usepackage{gillius}
 
 % cv style
 \moderncvtheme[black]{classic}
@@ -29,21 +29,16 @@
 
 \begin{document}
 \makecvtitle
-%\section{Summary}
-{
-}
+%\section{Summary}{}
 
 \section{Education}
-\cventry{2011--}{B.Sc. in Computer Science}{University of Campinas}
-{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: July 2015).}
+\cventry{2011--}{B.Sc. in Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: July 2016).}
 
 \section{Experience}
 
 \subsection{Academic}
 
-\cventry{2013--2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}
-{University of Campinas}{Campinas, São Paulo, Brazil}
-{Advisor: Prof. Edson Borin (IC-Unicamp). Co-Advisor: Prof. Sandro Rigo (IC-Unicamp). Funded by a Samsung Scholarship}
+\cventry{2013--2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}{University of Campinas}{Campinas, São Paulo, Brazil}{Advisor: Prof. Edson Borin (IC-Unicamp). Co-Advisor: Prof. Sandro Rigo (IC-Unicamp). Funded by a Samsung Scholarship}
 
 \cventry{2012--2014}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{
     \begin{itemize}
@@ -57,14 +52,11 @@
 
 \subsection{Volunteer}
 
-\cventry{2011--2014}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}
-{Campinas, São Paulo, Brazil}{Unicamp Computing Students' Union (CACo).}
+\cventry{2011--2014}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}{Campinas, São Paulo, Brazil}{Unicamp Computing Students' Union (CACo).}
 
-\cventry{2012--2013}{Undergraduate Representative}{Institute of Computing}{University of Campinas}
-{Campinas, São Paulo, Brazil}{Undergraduate representative in the Undergraduate Affairs Commission of the Institute of Computing during the 2012-13 term.}
+\cventry{2012--2013}{Undergraduate Representative}{Institute of Computing}{University of Campinas}{Campinas, São Paulo, Brazil}{Undergraduate representative in the Undergraduate Affairs Commission of the Institute of Computing during the 2012-13 term.}
 
-\cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}
-{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
+\cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
 \section{Technical Skills}
 \cvitem{Basic}{Shell Script, ARM Assembly, Lua}
