update file header and add license.

--- a/cv-en.tex
+++ b/cv-en.tex
@@ -1,10 +1,13 @@
-% cv-en for alexandre medeiros
-%   by alemedeiros
+% cv-en.tex
+%   by alemedeiros <alexandre.n.medeiros _at_ gmail.com>
 %
 % my curriculum vitae -- english version
 %
+% License:
+% % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
 % created: 2013-05-26
-% last revision: 2014-03-09
+% last revision: 2014-03-24
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
