--- a/cv-br.tex
+++ b/cv-br.tex
@@ -62,8 +62,8 @@
 \cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
-\cvitem{Básico}{Shell Script, ARM Assembly, Lua}
-\cvitem{Intermediário}{Sistemas operacionais GNU/Linux, git, \LaTeX{}}
+\cvitem{Básico}{ARM Assembly, Lua}
+\cvitem{Intermediário}{Haskell, Go, Sistemas operacionais GNU/Linux, Shell Script, git, \LaTeX{}, Programação Paralela (openMP e pthreads)}
 \cvitem{Avançado}{C, Python}
 
 \section{Idiomas}
