--- a/cv-br.tex
+++ b/cv-br.tex
@@ -7,14 +7,14 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2014-03-24
+% last revision: 2015-03-08
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
 \usepackage[brazilian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{gillius}
+\usepackage{opensans}
 
 % cv style
 \moderncvtheme[black]{classic}
