Update general info

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -25,13 +25,14 @@
 
 % optional info
 \title{Curriculum Vitae}
-\mobile{+55~(11)~96624~2947}
+%\mobile{+55~(11)~96624~2947}
+%\mobile{+44~7477~713825}
 \email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.sdf.org}
-\extrainfo{alemedeiros no gitorious, github}
+\social[github]{alemedeiros}
 
 \begin{document}
-\makecvtitle
+\makecvtitle{}
 %\section{Resumo}{}
 
 \section{Educação}
