--- a/cv-br.tex
+++ b/cv-br.tex
@@ -36,29 +36,33 @@
 %\section{Resumo}{}
 
 \section{Educação}
-\cventry{2011--}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação em Julho de 2016).}
+\cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação: Julho de 2016)}
 
 \section{Experiência}
 
 \subsection{Acadêmica}
 
-\cventry{2013--2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Orientador: Prof. Edson Borin (IC-Unicamp). Co-Orientador: Prof. Sandro Rigo (IC-Unicamp). Financiado por bolsa da Samsung}
+\cventry{2013 --- 2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
+    Orientador: Prof. Edson Borin (IC-Unicamp)\newline
+    Co-Orientador: Prof. Sandro Rigo (IC-Unicamp)\newline
+    Financiado por bolsa da Samsung
+}
 
-\cventry{2012--2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{
+\cventry{2012 --- 2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
     \begin{itemize}
-        \item MC102 -- Algoritmos e Programação de Computadores -- Prof. Hélio Pedrini -- 1º semestre de 2014
-        \item MC102 -- Algoritmos e Programação de Computadores -- Prof. Cid Carvalho de Souza -- 2º semestre de 2013
-        \item MC404 -- Organização Básica de Computadores e Linguagem de Montagem -- Prof. Edson Borin -- 1º semestre de 2013.
-        \item MC202 -- Estruturas de Dados -- Prof. Tomasz Kowaltowski -- 2º semestre de 2012.
-        \item MC202 -- Estruturas de Dados -- Prof. Cid Carvalho de Souza -- 1º semestre de 2012.
+        \item Algoritmos e Programação de Computadores --- 1º semestre de 2014
+        \item Algoritmos e Programação de Computadores --- 2º semestre de 2013
+        \item Organização Básica de Computadores e Linguagem de Montagem --- 1º semestre de 2013
+        \item Estruturas de Dados --- 2º semestre de 2012
+        \item Estruturas de Dados --- 1º semestre de 2012
     \end{itemize}
 }
 
 \subsection{Voluntária}
 
-\cventry{2011--2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação)}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
+\cventry{2011 --- 2014}{Coordenador Administrativo}{CACo (Centro Acadêmico da Computação)}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Centro acadêmico dos estudantes de computação da Unicamp}
 
-\cventry{2012--2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Representante Discente na Comissão de Graduação do Instituto de Computação durante o período de 2012-13.}
+\cventry{2012 --- 2013}{Representante Discente de Graduação}{Instituto de Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Representante Discente na Comissão de Graduação do Instituto de Computação durante o período de 2012--13}
 
 \cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
