--- a/cv-en.tex
+++ b/cv-en.tex
@@ -16,6 +16,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{opensans}
 
+\usepackage[super]{nth}
+
 % cv style
 \moderncvtheme[black]{classic}
 
@@ -36,29 +38,33 @@
 %\section{Summary}{}
 
 \section{Education}
-\cventry{2011--}{B.Sc. in Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: July 2016).}
+\cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: July 2016)}
 
 \section{Experience}
 
 \subsection{Academic}
 
-\cventry{2013--2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}{University of Campinas}{Campinas, São Paulo, Brazil}{Advisor: Prof. Edson Borin (IC-Unicamp). Co-Advisor: Prof. Sandro Rigo (IC-Unicamp). Funded by a Samsung Scholarship}
+\cventry{2013 --- 2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}{University of Campinas}{Campinas, São Paulo, Brazil}{%
+    Advisor: Prof.\ Edson Borin (IC-Unicamp)\newline
+    Co-Advisor: Prof.\ Sandro Rigo (IC-Unicamp)\newline
+    Funded by a Samsung Scholarship
+}
 
-\cventry{2012--2014}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{
+\cventry{2012 --- 2014}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{%
     \begin{itemize}
-        \item MC102 -- Algorithm and Computer Programming -- Prof. Hélio Pedrini -- 1st semester of 2014
-        \item MC102 -- Algorithm and Computer Programming -- Prof. Cid Carvalho de Souza -- 2nd semester of 2013
-        \item MC404 -- Basic Organization of Computers and Assembly Language -- Prof. Edson Borin -- 1st semester of 2013.
-        \item MC202 -- Data Structures -- Prof. Tomasz Kowaltowski -- 2nd semester of 2012.
-        \item MC202 -- Data Structures -- Prof. Cid Carvalho de Souza -- 1st semester of 2012.
+        \item Algorithm and Computer Programming --- \nth{1} semester of 2014
+        \item Algorithm and Computer Programming --- \nth{2} semester of 2013
+        \item Basic Organization of Computers and Assembly Language --- \nth{1} semester of 2013
+        \item Data Structures --- \nth{2} semester of 2012
+        \item Data Structures --- \nth{1} semester of 2012
     \end{itemize}
 }
 
 \subsection{Volunteer}
 
-\cventry{2011--2014}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}{Campinas, São Paulo, Brazil}{Unicamp Computing Students' Union (CACo).}
+\cventry{2011 --- 2014}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}{Campinas, São Paulo, Brazil}{Unicamp Computing Students' Union (CACo)}
 
-\cventry{2012--2013}{Undergraduate Representative}{Institute of Computing}{University of Campinas}{Campinas, São Paulo, Brazil}{Undergraduate representative in the Undergraduate Affairs Commission of the Institute of Computing during the 2012-13 term.}
+\cventry{2012 --- 2013}{Undergraduate Representative}{Institute of Computing}{University of Campinas}{Campinas, São Paulo, Brazil}{Undergraduate representative in the Undergraduate Affairs Commission of the Institute of Computing during the 2012--13 term}
 
 \cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
