Add QMUL to education

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -37,6 +37,7 @@
 
 \section{Educação}
 \cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação: Julho de 2016)}
+\cventry{Setembro 2014 --- Agosto 2015}{Bacharelado em Ciência da Computação}{Queen Mary University of London}{Londres, Reino Unido}{}{Estudante associado (Financiado por bolsa do governo brasileiro: Ciência sem Fronteiras)}
 
 \section{Experiência}
 
