--- a/cv-en.tex
+++ b/cv-en.tex
@@ -39,6 +39,7 @@
 
 \section{Education}
 \cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: July 2016)}
+\cventry{September 2014 --- August 2015}{B.Sc. Computer Science}{Queen Mary University of London}{London, United Kingdom}{}{Associate Student (Funded by Brazilian Government Scholarship: Science without Borders)}
 
 \section{Experience}
 
