Review current technical skills

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -68,8 +68,8 @@
 \cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
-\cvitem{Básico}{ARM Assembly, Lua}
-\cvitem{Intermediário}{Haskell, Go, Sistemas operacionais GNU/Linux, Shell Script, git, \LaTeX{}, Programação Paralela (openMP e pthreads)}
+\cvitem{Básico}{ARM Assembly, Lua, JavaScript, PHP, SQL}
+\cvitem{Intermediário}{Haskell, Go, Sistemas operacionais GNU/Linux, Programação Paralela (pthreads, openMP e MPI), Shell Script, git, \LaTeX{}, Java}
 \cvitem{Avançado}{C, Python}
 
 \section{Idiomas}
