--- a/cv-en.tex
+++ b/cv-en.tex
@@ -70,8 +70,8 @@
 \cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
 \section{Technical Skills}
-\cvitem{Basic}{ARM Assembly, Lua}
-\cvitem{Intermediate}{Haskell, Go, GNU/Linux Operating Systems, Shell Script, git, \LaTeX{}, Parallel Programming (pthreads and openMP)}
+\cvitem{Basic}{ARM Assembly, Lua, JavaScript, PHP, SQL}
+\cvitem{Intermediate}{Haskell, Go, GNU/Linux Operating Systems, Parallel Programming (pthreads, openMP and MPI), Shell Script, git, \LaTeX{}, Java}
 \cvitem{Advanced}{C, Python}
 
 \section{Languages}
