Add Intel Embedded Systems Competition information

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2015-03-08
+% last revision: 2015-04-02
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -44,9 +44,14 @@
 \subsection{Acadêmica}
 
 \cventry{2013 --- 2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
-    Orientador: Prof. Edson Borin (IC-Unicamp)\newline
-    Co-Orientador: Prof. Sandro Rigo (IC-Unicamp)\newline
+    Orientador: Prof.\ Edson Borin (IC-Unicamp)\newline
+    Co-Orientador: Prof.\ Sandro Rigo (IC-Unicamp)\newline
     Financiado por bolsa da Samsung
+}
+
+\cventry{2013}{Competição Intel de Sistemas Embarcados 2013}{2º lugar}{III Simpósio Brasileiro de Engenharia de Sistemas Computacionais}{Niterói, Rio de Janeiro, Brasil}{%
+    Grupo: Gabriel Krisman Bertazi, Augusto dos Santos Morgan e Alexandre Medeiros\newline
+    Orientadores: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
 }
 
 \cventry{2012 --- 2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
