--- a/cv-en.tex
+++ b/cv-en.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2015-03-08
+% last revision: 2015-04-02
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -49,6 +49,11 @@
     Advisor: Prof.\ Edson Borin (IC-Unicamp)\newline
     Co-Advisor: Prof.\ Sandro Rigo (IC-Unicamp)\newline
     Funded by a Samsung Scholarship
+}
+
+\cventry{2013}{Intel Embedded Systems Competition 2013}{\nth{2} place}{III Brazilian Symposium on Computing Systems Engineering}{Niterói, Rio de Janeiro, Brazil}{%
+    Group: Gabriel Krisman Bertazi, Augusto dos Santos Morgan e Alexandre Medeiros\newline
+    Supervisors: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
 }
 
 \cventry{2012 --- 2014}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{%
