Add intership and update information

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2015-04-02
+% last revision: 2016-02-24
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -25,8 +25,7 @@
 
 % optional info
 \title{Curriculum Vitae}
-%\mobile{+55~(11)~96624~2947}
-%\mobile{+44~7477~713825}
+\mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.sdf.org}
 \social[github]{alemedeiros}
@@ -36,10 +35,15 @@
 %\section{Resumo}{}
 
 \section{Educação}
-\cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação: Julho de 2016)}
+\cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação: Dezembro de 2016)}
 \cventry{Setembro 2014 --- Agosto 2015}{Bacharelado em Ciência da Computação}{Queen Mary University of London}{Londres, Reino Unido}{}{Estudante associado (Financiado por bolsa do governo brasileiro: Ciência sem Fronteiras)}
 
 \section{Experiência}
+
+\subsection{Profissional}
+
+\cventry{Dezembro 2015 --- Março 2016}{Health Search Exploration}{Estagiário em Engenharia de Software}{Google}{Belo Horizonte, Minas Gerais, Brasil}{%
+}
 
 \subsection{Acadêmica}
 
@@ -54,8 +58,9 @@
     Orientadores: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
 }
 
-\cventry{2012 --- 2014}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
+\cventry{2012 --- 2016}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
     \begin{itemize}
+        \item Programação Orientada a Objetos --- 1º semestre de 2016
         \item Algoritmos e Programação de Computadores --- 1º semestre de 2014
         \item Algoritmos e Programação de Computadores --- 2º semestre de 2013
         \item Organização Básica de Computadores e Linguagem de Montagem --- 1º semestre de 2013
@@ -73,9 +78,9 @@
 \cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
-\cvitem{Básico}{ARM Assembly, Lua, JavaScript, PHP, SQL}
-\cvitem{Intermediário}{Haskell, Go, Sistemas operacionais GNU/Linux, Programação Paralela (pthreads, openMP e MPI), Shell Script, git, \LaTeX{}, Java}
-\cvitem{Avançado}{C, Python}
+\cvitem{Básico}{ARM Assembly, Go, Lua, JavaScript, PHP, SQL}
+\cvitem{Intermediário}{Haskell, Sistemas operacionais GNU/Linux, Programação Paralela, Shell Script, git, \LaTeX{}, Java}
+\cvitem{Avançado}{C/C++, Python}
 
 \section{Idiomas}
 \cvlanguage{Português Brasileiro}{Fluente}{Língua Nativa}
