--- a/cv-en.tex
+++ b/cv-en.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2015-04-02
+% last revision: 2016-02-24
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -27,8 +27,7 @@
 
 % optional info
 \title{Curriculum Vitae}
-%\mobile{+55~(11)~96624~2947}
-\mobile{+44~7477~713825}
+\mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.sdf.org}
 \social[github]{alemedeiros}
@@ -38,10 +37,16 @@
 %\section{Summary}{}
 
 \section{Education}
-\cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: July 2016)}
+\cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: December 2016)}
 \cventry{September 2014 --- August 2015}{B.Sc. Computer Science}{Queen Mary University of London}{London, United Kingdom}{}{Associate Student (Funded by Brazilian Government Scholarship: Science without Borders)}
 
 \section{Experience}
+
+\subsection{Professional}
+
+\cventry{December 2015 --- March 2016}{Health Search Exploration}{Software Engineering Intern}{Google}{Belo Horizonte, Minas Gerais, Brazil}{%
+    Host: Bruno Gusmão
+}
 
 \subsection{Academic}
 
@@ -56,8 +61,9 @@
     Supervisors: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
 }
 
-\cventry{2012 --- 2014}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{%
+\cventry{2012 --- 2016}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{%
     \begin{itemize}
+	\item Object Oriented Programming --- \nth{1} semester of 2016
         \item Algorithm and Computer Programming --- \nth{1} semester of 2014
         \item Algorithm and Computer Programming --- \nth{2} semester of 2013
         \item Basic Organization of Computers and Assembly Language --- \nth{1} semester of 2013
@@ -75,9 +81,9 @@
 \cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
 \section{Technical Skills}
-\cvitem{Basic}{ARM Assembly, Lua, JavaScript, PHP, SQL}
-\cvitem{Intermediate}{Haskell, Go, GNU/Linux Operating Systems, Parallel Programming (pthreads, openMP and MPI), Shell Script, git, \LaTeX{}, Java}
-\cvitem{Advanced}{C, Python}
+\cvitem{Basic}{ARM Assembly, Go, Lua, JavaScript, PHP, SQL}
+\cvitem{Intermediate}{Haskell, GNU/Linux Operating Systems, Parallel Programming, Shell Script, git, \LaTeX{}, Java}
+\cvitem{Advanced}{C/C++, Python}
 
 \section{Languages}
 \cvlanguage{Brazilian Portuguese}{Fluent}{Native Language}
