--- a/cv-en.tex
+++ b/cv-en.tex
@@ -7,19 +7,19 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2016-02-24
+% last revision: 2016-03-19
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
 \usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{opensans}
+\usepackage{roboto}
 
 \usepackage[super]{nth}
 
 % cv style
-\moderncvtheme[black]{classic}
+\moderncvtheme[purple]{casual}
 
 % personal info
 \firstname{Alexandre}
