Add Pascal Award information

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -35,7 +35,9 @@
 %\section{Resumo}{}
 
 \section{Educação}
-\cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{}{Em Andamento (Previsão de graduação: Dezembro de 2016)}
+\cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Em Andamento (Previsão de graduação: Dezembro de 2016)}{%
+    Prêmio Pascal 2014 (Melhor desempenho dentre os alunos de Ciência da Computação)
+}
 \cventry{Setembro 2014 --- Agosto 2015}{Bacharelado em Ciência da Computação}{Queen Mary University of London}{Londres, Reino Unido}{}{Estudante associado (Financiado por bolsa do governo brasileiro: Ciência sem Fronteiras)}
 
 \section{Experiência}
