--- a/cv-en.tex
+++ b/cv-en.tex
@@ -37,7 +37,9 @@
 %\section{Summary}{}
 
 \section{Education}
-\cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{Ongoing (Expected date of graduation: December 2016)}
+\cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{Ongoing (Expected graduation: December 2016)}{%
+    Pascal Award 2014 (Best academic performance of Computer Science students)
+}
 \cventry{September 2014 --- August 2015}{B.Sc. Computer Science}{Queen Mary University of London}{London, United Kingdom}{}{Associate Student (Funded by Brazilian Government Scholarship: Science without Borders)}
 
 \section{Experience}
