--- a/cv-br.tex
+++ b/cv-br.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2016-03-19
+% last revision: 2016-04-19
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -32,11 +32,12 @@
 
 \begin{document}
 \makecvtitle{}
-%\section{Resumo}{}
+\section{Resumo}{Um programador versátil com distinto desempenho acadêmico. Interessado por diversas áreas da computação variando desde programação em baixo nível e Sistemas Operacionais até conceitos abstratos e de alto nívels como Programação Funcional e o modelo MapReduce de programação. Eu sinto prazer em aprender novas habilidades e ao enfrentar desafios, meu objetivo é nunca deixar de crescer profissionalmente e pessoalmente.}
 
 \section{Educação}
 \cventry{2011 --- presente}{Bacharelado em Ciência da Computação}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Em Andamento (Previsão de graduação: Dezembro de 2016)}{%
-    Prêmio Pascal 2014 (Melhor desempenho dentre os alunos de Ciência da Computação)
+	Coeficiente de rendimento atual: 8,6/10\newline
+	Prêmio Pascal 2014 (Melhor desempenho dentre os alunos de Ciência da Computação)
 }
 \cventry{Setembro 2014 --- Agosto 2015}{Bacharelado em Ciência da Computação}{Queen Mary University of London}{Londres, Reino Unido}{}{Estudante associado (Financiado por bolsa do governo brasileiro: Ciência sem Fronteiras)}
 
@@ -50,25 +51,25 @@
 \subsection{Acadêmica}
 
 \cventry{2013 --- 2014}{Consumo de energia em dispositivos móveis ARM}{Iniciação Científica}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
-    Orientador: Prof.\ Edson Borin (IC-Unicamp)\newline
-    Co-Orientador: Prof.\ Sandro Rigo (IC-Unicamp)\newline
-    Financiado por bolsa da Samsung
+	Orientador: Prof.\ Edson Borin (IC-Unicamp)\newline
+	Co-Orientador: Prof.\ Sandro Rigo (IC-Unicamp)\newline
+	Financiado por bolsa da Samsung
 }
 
 \cventry{2013}{Competição Intel de Sistemas Embarcados 2013}{2º lugar}{III Simpósio Brasileiro de Engenharia de Sistemas Computacionais}{Niterói, Rio de Janeiro, Brasil}{%
-    Grupo: Gabriel Krisman Bertazi, Augusto dos Santos Morgan e Alexandre Medeiros\newline
-    Orientadores: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
+	Grupo: Gabriel Krisman Bertazi, Augusto dos Santos Morgan e Alexandre Medeiros\newline
+	Orientadores: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
 }
 
 \cventry{2012 --- 2016}{Monitoria}{Programa de Apoio Didático}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{%
-    \begin{itemize}
-        \item Programação Orientada a Objetos --- 1º semestre de 2016
-        \item Algoritmos e Programação de Computadores --- 1º semestre de 2014
-        \item Algoritmos e Programação de Computadores --- 2º semestre de 2013
-        \item Organização Básica de Computadores e Linguagem de Montagem --- 1º semestre de 2013
-        \item Estruturas de Dados --- 2º semestre de 2012
-        \item Estruturas de Dados --- 1º semestre de 2012
-    \end{itemize}
+	\begin{itemize}
+		\item Programação Orientada a Objetos --- 1º semestre de 2016
+		\item Algoritmos e Programação de Computadores --- 1º semestre de 2014
+		\item Algoritmos e Programação de Computadores --- 2º semestre de 2013
+		\item Organização Básica de Computadores e Linguagem de Montagem --- 1º semestre de 2013
+		\item Estruturas de Dados --- 2º semestre de 2012
+		\item Estruturas de Dados --- 1º semestre de 2012
+	\end{itemize}
 }
 
 \subsection{Voluntária}
