--- a/cv-en.tex
+++ b/cv-en.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2016-03-19
+% last revision: 2016-04-19
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -34,11 +34,12 @@
 
 \begin{document}
 \makecvtitle{}
-%\section{Summary}{}
+\section{Summary}{A versatile programmer with distinguished academic performance. Interested in several areas of Computer Science, ranging from Operating Systems and low level programming to high level and abstract concepts as Functional Programming and MapReduce programming model. I enjoy learning new skills and facing challenges, my goal is to never stop growing up professionally and personally.}
 
 \section{Education}
 \cventry{2011 --- present}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{Ongoing (Expected graduation: December 2016)}{%
-    Pascal Award 2014 (Best academic performance of Computer Science students)
+	Current average grade: 8.6/10\newline
+	Pascal Award 2014 (Best academic performance of Computer Science students)
 }
 \cventry{September 2014 --- August 2015}{B.Sc. Computer Science}{Queen Mary University of London}{London, United Kingdom}{}{Associate Student (Funded by Brazilian Government Scholarship: Science without Borders)}
 
@@ -47,31 +48,31 @@
 \subsection{Professional}
 
 \cventry{December 2015 --- March 2016}{Health Search Exploration}{Software Engineering Intern}{Google}{Belo Horizonte, Minas Gerais, Brazil}{%
-    Host: Bruno Gusmão
+	Host: Bruno Gusmão
 }
 
 \subsection{Academic}
 
 \cventry{2013 --- 2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}{University of Campinas}{Campinas, São Paulo, Brazil}{%
-    Advisor: Prof.\ Edson Borin (IC-Unicamp)\newline
-    Co-Advisor: Prof.\ Sandro Rigo (IC-Unicamp)\newline
-    Funded by a Samsung Scholarship
+	Advisor: Prof.\ Edson Borin (IC-Unicamp)\newline
+	Co-Advisor: Prof.\ Sandro Rigo (IC-Unicamp)\newline
+	Funded by a Samsung Scholarship
 }
 
 \cventry{2013}{Intel Embedded Systems Competition 2013}{\nth{2} place}{III Brazilian Symposium on Computing Systems Engineering}{Niterói, Rio de Janeiro, Brazil}{%
-    Group: Gabriel Krisman Bertazi, Augusto dos Santos Morgan e Alexandre Medeiros\newline
-    Supervisors: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
+	Group: Gabriel Krisman Bertazi, Augusto dos Santos Morgan e Alexandre Medeiros\newline
+	Supervisors: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
 }
 
 \cventry{2012 --- 2016}{Teaching Assistant}{Programa de Apoio Didático}{University of Campinas}{Campinas, São Paulo, Brazil}{%
-    \begin{itemize}
-	\item Object Oriented Programming --- \nth{1} semester of 2016
-        \item Algorithm and Computer Programming --- \nth{1} semester of 2014
-        \item Algorithm and Computer Programming --- \nth{2} semester of 2013
-        \item Basic Organization of Computers and Assembly Language --- \nth{1} semester of 2013
-        \item Data Structures --- \nth{2} semester of 2012
-        \item Data Structures --- \nth{1} semester of 2012
-    \end{itemize}
+	\begin{itemize}
+		\item Object Oriented Programming --- \nth{1} semester of 2016
+		\item Algorithm and Computer Programming --- \nth{1} semester of 2014
+		\item Algorithm and Computer Programming --- \nth{2} semester of 2013
+		\item Basic Organization of Computers and Assembly Language --- \nth{1} semester of 2013
+		\item Data Structures --- \nth{2} semester of 2012
+		\item Data Structures --- \nth{1} semester of 2012
+	\end{itemize}
 }
 
 \subsection{Volunteer}
