Add a couple technical skills

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2016-04-19
+% last revision: 2016-04-20
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -81,7 +81,7 @@
 \cventry{2012, 2013}{Instrutor de GNU/Linux básico para Ingressantes}{GPSL}{Universidade Estadual de Campinas}{Campinas, São Paulo, Brasil}{Aulas básicas de GNU/Linux para Alunos de Computação}
 
 \section{Conhecimento Técnico}
-\cvitem{Básico}{ARM Assembly, Go, Lua, JavaScript, PHP, SQL}
+\cvitem{Básico}{ARM Assembly, VHDL, Go, Lua, JavaScript, PHP, SQL, Django Web Framework}
 \cvitem{Intermediário}{Haskell, Sistemas operacionais GNU/Linux, Programação Paralela, Shell Script, git, \LaTeX{}, Java}
 \cvitem{Avançado}{C/C++, Python}
 
