--- a/cv-en.tex
+++ b/cv-en.tex
@@ -7,7 +7,7 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2016-04-19
+% last revision: 2016-04-20
 
 \documentclass[10pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
@@ -84,7 +84,7 @@
 \cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
 \section{Technical Skills}
-\cvitem{Basic}{ARM Assembly, Go, Lua, JavaScript, PHP, SQL}
+\cvitem{Basic}{ARM Assembly, VHDL, Go, Lua, JavaScript, PHP, SQL, Django Web Framework}
 \cvitem{Intermediate}{Haskell, GNU/Linux Operating Systems, Parallel Programming, Shell Script, git, \LaTeX{}, Java}
 \cvitem{Advanced}{C/C++, Python}
 
