Update homepage url

--- a/cv-br.tex
+++ b/cv-br.tex
@@ -27,7 +27,7 @@
 \title{Curriculum Vitae}
 \mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
-\homepage{http://alemedeiros.sdf.org}
+\homepage{http://alemedeiros.xyz}
 \social[github]{alemedeiros}
 
 \begin{document}
