Add linkedin account

--- a/cv-en.tex
+++ b/cv-en.tex
@@ -31,6 +31,7 @@
 \email{alexandre.n.medeiros@gmail.com}
 \homepage{http://alemedeiros.xyz}
 \social[github]{alemedeiros}
+\social[linkedin]{alemedeiros}
 
 \begin{document}
 \makecvtitle{}
